--- a/style.css
+++ b/style.css
@@ -231,13 +231,13 @@ footer {
     }
 
     .text-wrapper {
-        max-width: 562px;
+        max-width: 560px;
         /* 📍 Максимальная ширина для блока с текстом */
     }
 
     .about-section {
     /* 📍 Внутренний отступ сверху и снизу */
-    padding: 66px 0 54px;
+    padding: 60px 0;
     }
 }
 
@@ -253,8 +253,7 @@ footer {
 @media screen and (max-width: 576px) {
     .main-section {
         /* 📍 Внутренние отступы сверху и снизу */
-
-        padding: 40px 0 60px;
+        padding: 30px 0 60px;
     }
 
     .main-section .wrapper {
