--- a/style.css
+++ b/style.css
@@ -237,7 +237,7 @@ footer {
 
     .about-section {
     /* 📍 Внутренний отступ сверху и снизу */
-    padding: 60px 0;
+    padding: 60px 0px;
     }
 }
 
